# EmuHem

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: acars_app.cpp.D78C89B459FBB27D.idx  acars_app.hpp.EAA8D503EF20A47A.idx  adc.hpp.E9FCA6254760E58F.idx  adsb.cpp.3EAC6F052CE7F3F4.idx  adsb.hpp.02DCE97D71C187BE.idx  adsb_frame.cpp.542E50F7ACE2705C.idx  adsb_frame.hpp.B86D340522ABBAF0.idx  ais_app.cpp.5829B0E6C25855EC.idx  ais_app.hpp.060BC19942E03DB3.idx  ais_baseband.cpp.450596B216ED54A1.idx  ais_baseband.hpp.F3ABD831A1E0A394.idx  ais_packet.cpp.CA3AFAA94A9D9C33.idx  ais_packet.hpp.E6C026B2F09521FD.idx  ak4951.cpp.84A8202525D92FAA.idx  ak4951.hpp.C98D8C03D1AE9A79.idx  analog_audio_app.cpp.43D42A961D7D0AB3.idx  analog_audio_app.hpp.1AAC655BA04CE206.idx  analog_tv_app.cpp.4C9C9296E7226435.idx  analog_tv_app.hpp.ED0AD740F878D0ED.idx  app_settings.cpp.DB598901F00951EB.idx  app_settings.hpp.3819AE7C5B7C04D0.idx  app_stubs.cpp.0A12293293246A1A.idx  aprs.cpp.275C6F78F7DC6835.idx  aprs.hpp.DA597CDA45461C89.idx  aprs_packet.cpp.75059D0F63F0AFFE.idx  aprs_packet.hpp.37B03AC9A4FE0D4F.idx  audio.hpp.E922BCF1BE1A7430.idx  audio_compressor.cpp.F3B9D20F155EBBE1.idx  audio_compressor.hpp.B396929A3CEACFDE.idx  audio_dma.hpp.643F0F4A3E088E95.idx  audio_output.cpp.93CD5E68F617F450.idx  audio_output.hpp.98B21CCD898254FB.idx  audio_stats_collector.cpp.E775B75A8358E1A0.idx  audio_stats_collector.hpp.A3C551CAED63234A.idx  ax25.cpp.5DAA2545FF82D72C.idx  ax25.hpp.AD8A74FB206550A5.idx  backlight.cpp.C5777437B26B5F01.idx  backlight.hpp.5CDF9B89BF29E08A.idx  baseband.hpp.8779480D71193B29.idx  baseband_api.cpp.369320F62B895D4C.idx  (+761 more)
.claude/: CLAUDE.md
docs/: architecture.md  implementation_status.md  phase13_ctest_plan.md  tests_status.md
src/: main_emu.cpp
src/platform/chibios_shim/: ch.h  chcore.h  chheap.h  chibios_shim.cpp  chprintf.h  hal.h  hal_instances.cpp
src/platform/fatfs_shim/: diskio.h  ff.h  ff_emu.cpp  integer.h
src/platform/lpc43xx/: lpc43xx_cpp.hpp  platform_detect_emu.c
src/platform/portapack_shim/: app_stubs.cpp  baseband_dma_emu.cpp  baseband_hw_emu.cpp  core_control.hpp  core_control_emu.cpp  debug.hpp  debug_emu.cpp  emu_compat.hpp  hackrf_hal.hpp  i2s.hpp  iq_source.cpp  iq_source.hpp  irq_controls_emu.cpp  memory_map.hpp  persistent_memory_emu.cpp  phase2_stubs.cpp  portapack_emu.cpp  portapack_io.hpp  portapack_io_emu.cpp  rtc_time_emu.cpp  spi_image.hpp  usb_serial.hpp  usb_serial_device_to_host.h
tests/: CMakeLists.txt  README.md  linker_stubs.cpp
